# quakenet

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
resources/: 1on1r.bot  1on1r.ini  2fort5.ini  2fort5r.bot  2fort5r.ini  dervish.ini  impulses.ini  respawn1.loc  settings.ini  unknown.ini
resources/maps/: 2fort5.bsp
src/: .cproject  .project  AttackGoal.cpp  AttackGoal.hpp  Bot.cpp  Bot.hpp  BotMemory.cpp  BotMemory.hpp  Box.cpp  Box.hpp  BspParser.cpp  BspParser.hpp  Common.hpp  Config.cpp  Config.hpp  Connection.cpp  Connection.hpp  DownloadMessage.cpp  DownloadMessage.hpp  Entity.cpp  Entity.hpp  ExploreGoal.cpp  ExploreGoal.hpp  Gene.cpp  Gene.hpp  Genome.cpp  Genome.hpp  Goal.hpp  Logger.hpp  Main.cpp  MathUtil.cpp  MathUtil.hpp  MessageTypes.hpp  ModelListMessage.cpp  ModelListMessage.hpp  NeuralNet.cpp  NeuralNet.hpp  Neuron.cpp  Neuron.hpp  NeuronLayer.cpp  (+38 more)
